WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34536
wx port: JavascriptCore doesn't have JIT enabled
https://bugs.webkit.org/show_bug.cgi?id=34536
Summary
wx port: JavascriptCore doesn't have JIT enabled
Kevin Watters
Reported
2010-02-03 10:36:54 PST
Created
attachment 48052
[details]
enables JSCore jit support when PLATFORM(WX) Platform.h can be changed to enable JIT support for the wx port.
Attachments
enables JSCore jit support when PLATFORM(WX)
(1.95 KB, patch)
2010-02-03 10:36 PST
,
Kevin Watters
kevino
: review+
kevino
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kevin Ollivier
Comment 1
2010-02-03 11:17:31 PST
Landed in
r54287
, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug