Reviewed by Kevin Ollivier.

[wx] Enable JIT compilation for wx.

https://bugs.webkit.org/show_bug.cgi?id=34536


Canonical link: https://commits.webkit.org/45630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54287 268f45cc-cd09-0410-ab3c-d52691b4dbfc